src/tests/routes/crates/versions/snapshots/integration__routes__crates__versions__read__show_by_crate_name_and_version.snap
---
source: src/tests/routes/crates/versions/read.rs
expression: json
---
{
  "version": {
    "audit_actions": [],
    "bin_names": null,
    "checksum": "c241cd77c3723ccf1aa453f169ee60c0a888344da504bee0142adb859092acb4",
    "crate": "foo_vers_show",
    "crate_size": 1234,
    "created_at": "[datetime]",
    "description": null,
    "dl_path": "/api/v1/crates/foo_vers_show/2.0.0/download",
    "documentation": null,
    "downloads": 0,
    "edition": null,
    "features": {},
    "has_lib": null,
    "homepage": null,
    "id": "[id]",
    "lib_links": null,
    "license": null,
    "linecounts": null,
    "links": {
      "authors": "/api/v1/crates/foo_vers_show/2.0.0/authors",
      "dependencies": "/api/v1/crates/foo_vers_show/2.0.0/dependencies",
      "version_downloads": "/api/v1/crates/foo_vers_show/2.0.0/downloads"
    },
    "num": "2.0.0",
    "published_by": {
      "avatar": "http://example.com/icon-the-first.png",
      "created_at": "[datetime]",
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo"
    },
    "readme_path": "/api/v1/crates/foo_vers_show/2.0.0/readme",
    "repository": null,
    "rust_version": "1.64",
    "trustpub_data": null,
    "updated_at": "[datetime]",
    "yank_message": null,
    "yanked": false
  }
}
